# mhp-classification

mental_project/: .gitignore  pyproject.toml
mental_project/src/: config.py  pipeline.py
mental_project/src/app/: main.py
mental_project/src/steps/: cleaning.py  preparation.py  training.py
mental_project/src/utils/: data_cleaning.py  data_preparation.py  training.py
